# in_context

./: .gitignore
GLA-CLIP/: .gitignore  (+11 more)
INSID3-main/: .gitignore  check_class_dist.py  general_scripts.sh  inference_keypoint_matching.py  inference_segmentation.py  opts.py  pyproject.toml  test_class.py  test_debug.py  test_run.py
INSID3-main/INSID3-original-code/: README.md  opts.py
INSID3-main/INSID3-original-code/models/: __init__.py  insid3.py
INSID3-main/INSID3-original-code/utils/: metrics.py
INSID3-main/datasets/: __init__.py  isaid_new.py
INSID3-main/models/: __init__.py  insid3.py
INSID3-main/output/debug_copy_0712_1057/: log.txt
INSID3-main/output/debug_detailed_0712_1106/: log.txt
INSID3-main/output/debug_fix_0712_1114/: log.txt
INSID3-main/output/debug_fix_0712_1115/: log.txt
INSID3-main/output/debug_tau03_merge04_0712_1119/: log.txt
INSID3-main/output/debug_tau05_merge035_0712_1120/: log.txt
INSID3-main/output/debug_tau05_merge035_0712_1132/: log.txt
INSID3-main/output/debug_tau05_merge035_0712_1133/: log.txt
INSID3-main/output/debug_upsample_0712_1110/: log.txt
INSID3-main/output/isaid_new_test1000_nocrf_0712_0133/: log.txt
INSID3-main/output/isaid_new_test100_0712_0118/: log.txt
INSID3-main/output/isaid_new_test100_nocrf_0712_0120/: log.txt
INSID3-main/output/isaid_new_test10_0712_0057/: log.txt
INSID3-main/output/isaid_new_test10_0712_0058/: log.txt
INSID3-main/output/isaid_new_test10_0712_0103/: log.txt
INSID3-main/utils/: DynamicNorm.py  ProxyAnchor.py  Sliding.py  k_v_extension.py  metrics.py  refinement.py
(+87 files in other folders)
